--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -26,3 +26,11 @@ library
                        containers >=0.5.5 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable Interact
+  main-is:             Ch04/InteractWith.hs
+  build-depends:       base >=4.6 && <4.7,
+                       mtl >=2.2.1 && <2.3,
+                       containers >=0.5.5 && <0.6
+  hs-source-dirs:      src
+  default-language:    Haskell2010
