--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -27,7 +27,8 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable Interact
+executable Ch04_InteractWith
+  -- ghc-options:         -Wall
   main-is:             Ch04/InteractWith.hs
   build-depends:       base >=4.6 && <4.7,
                        mtl >=2.2.1 && <2.3,
