--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -20,8 +20,7 @@ library
   -- other-extensions:    
   exposed-modules:     RWH,
                        Ch03.Exercises,
-                       Ch04.Exercises,
-                       Ch05.SimpleJson
+                       Ch04.Exercises
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
                        containers >=0.5.5 && <0.6
