--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -23,7 +23,8 @@ library
                        Ch04.Exercises
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
-                       containers >=0.5.5 && <0.6
+                       containers >=0.5.5 && <0.6,
+                       regex-posix >=0.95.2 && <0.96
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -32,6 +33,7 @@ executable Ch04_InteractWith
   main-is:             Ch04/InteractWith.hs
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
-                       containers >=0.5.5 && <0.6
+                       containers >=0.5.5 && <0.6,
+                       regex-posix >=0.95.2 && <0.96
   hs-source-dirs:      src
   default-language:    Haskell2010
