--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -24,7 +24,9 @@ library
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
                        containers >=0.5.5 && <0.6,
-                       regex-posix >=0.95.2 && <0.96
+                       regex-posix >=0.95.2 && <0.96,
+                       filepath >=1.3.0.2 && <1.4,
+                       directory >=1.2.1.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -34,6 +36,8 @@ executable Ch04_InteractWith
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
                        containers >=0.5.5 && <0.6,
-                       regex-posix >=0.95.2 && <0.96
+                       regex-posix >=0.95.2 && <0.96,
+                       filepath >=1.3.0.2 && <1.4,
+                       directory >=1.2.1.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
