--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -26,7 +26,9 @@ library
                        containers >=0.5.5 && <0.6,
                        regex-posix >=0.95.2 && <0.96,
                        filepath >=1.3.0.2 && <1.4,
-                       directory >=1.2.1.0 && <1.3
+                       directory >=1.2.1.0 && <1.3,
+                       old-time >=1.1.0.1 && <1.1.1,
+                       time >=1.4.0.1 && <1.4.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -38,6 +40,8 @@ executable Ch04_InteractWith
                        containers >=0.5.5 && <0.6,
                        regex-posix >=0.95.2 && <0.96,
                        filepath >=1.3.0.2 && <1.4,
-                       directory >=1.2.1.0 && <1.3
+                       directory >=1.2.1.0 && <1.3,
+                       old-time >=1.1.0.1 && <1.1.1,
+                       time >=1.4.0.1 && <1.4.3
   hs-source-dirs:      src
   default-language:    Haskell2010
