--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -28,7 +28,9 @@ library
                        filepath >=1.3.0.2 && <1.4,
                        directory >=1.2.1.0 && <1.3,
                        old-time >=1.1.0.1 && <1.1.1,
-                       time >=1.4.0.1 && <1.4.3
+                       time >=1.4.0.1 && <1.4.3,
+                       QuickCheck >=2.7.5 && <2.8,
+                       random >=1.0.1.1 && <1.0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -42,6 +44,8 @@ executable Ch04_InteractWith
                        filepath >=1.3.0.2 && <1.4,
                        directory >=1.2.1.0 && <1.3,
                        old-time >=1.1.0.1 && <1.1.1,
-                       time >=1.4.0.1 && <1.4.3
+                       time >=1.4.0.1 && <1.4.3,
+                       QuickCheck >=2.7.5 && <2.8,
+                       random >=1.0.1.1 && <1.0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
