--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -20,7 +20,8 @@ library
   -- other-extensions:    
   exposed-modules:     RWH,
                        Ch03.Exercises,
-                       Ch04.Exercises
+                       Ch04.Exercises,
+                       Ch18.Exercises
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
                        containers >=0.5.5 && <0.6,
@@ -30,7 +31,9 @@ library
                        old-time >=1.1.0.1 && <1.1.1,
                        time >=1.4.0.1 && <1.4.3,
                        QuickCheck >=2.7.5 && <2.8,
-                       random >=1.0.1.1 && <1.0.2
+                       random >=1.0.1.1 && <1.0.2,
+                       transformers >=0.4.1.0 && <0.4.2,
+                       bytestring >=0.10.4.0 && <0.10.5
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -46,6 +49,8 @@ executable Ch04_InteractWith
                        old-time >=1.1.0.1 && <1.1.1,
                        time >=1.4.0.1 && <1.4.3,
                        QuickCheck >=2.7.5 && <2.8,
-                       random >=1.0.1.1 && <1.0.2
+                       random >=1.0.1.1 && <1.0.2,
+                       transformers >=0.4.1.0 && <0.4.2,
+                       bytestring >=0.10.4.0 && <0.10.5
   hs-source-dirs:      src
   default-language:    Haskell2010
