--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -15,7 +15,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  -- ghc-options:         -Wall
+  ghc-options:         -threaded
   -- other-modules:       
   -- other-extensions:    
   exposed-modules:     RWH,
@@ -38,7 +38,7 @@ library
   default-language:    Haskell2010
 
 executable Ch04_InteractWith
-  -- ghc-options:         -Wall
+  -- ghc-options:         -Wall -threaded
   main-is:             Ch04/InteractWith.hs
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
