--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -33,7 +33,8 @@ library
                        QuickCheck >=2.7.5 && <2.8,
                        random >=1.0.1.1 && <1.0.2,
                        transformers >=0.4.1.0 && <0.4.2,
-                       bytestring >=0.10.4.0 && <0.10.5
+                       bytestring >=0.10.4.0 && <0.10.5,
+                       array >=0.5.0.0 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -51,6 +52,7 @@ executable Ch04_InteractWith
                        QuickCheck >=2.7.5 && <2.8,
                        random >=1.0.1.1 && <1.0.2,
                        transformers >=0.4.1.0 && <0.4.2,
-                       bytestring >=0.10.4.0 && <0.10.5
+                       bytestring >=0.10.4.0 && <0.10.5,
+                       array >=0.5.0.0 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
