--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -28,13 +28,14 @@ library
                        regex-posix >=0.95.2 && <0.96,
                        filepath >=1.3.0.2 && <1.4,
                        directory >=1.2.1.0 && <1.3,
-                       old-time >=1.1.0.1 && <1.1.1,
-                       time >=1.4.0.1 && <1.4.3,
-                       QuickCheck >=2.7.5 && <2.8,
-                       random >=1.0.1.1 && <1.0.2,
-                       transformers >=0.4.1.0 && <0.4.2,
+                       old-time >=1.1.0.2 && <1.1.1,
+                       time >=1.5 && <1.6,
+                       QuickCheck >=2.7.6 && <2.8,
+                       random >=1.1 && <1.2,
+                       transformers >=0.4.1.0 && <0.5,
                        bytestring >=0.10.4.0 && <0.10.5,
-                       array >=0.5.0.0 && <0.6
+                       array >=0.5.0.0 && <0.6,
+                       text >=1.2.0.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -47,12 +48,13 @@ executable Ch04_InteractWith
                        regex-posix >=0.95.2 && <0.96,
                        filepath >=1.3.0.2 && <1.4,
                        directory >=1.2.1.0 && <1.3,
-                       old-time >=1.1.0.1 && <1.1.1,
-                       time >=1.4.0.1 && <1.4.3,
-                       QuickCheck >=2.7.5 && <2.8,
-                       random >=1.0.1.1 && <1.0.2,
-                       transformers >=0.4.1.0 && <0.4.2,
+                       old-time >=1.1.0.2 && <1.1.1,
+                       time >=1.5 && <1.6,
+                       QuickCheck >=2.7.6 && <2.8,
+                       random >=1.1 && <1.2,
+                       transformers >=0.4.1.0 && <0.5,
                        bytestring >=0.10.4.0 && <0.10.5,
-                       array >=0.5.0.0 && <0.6
+                       array >=0.5.0.0 && <0.6,
+                       text >=1.2.0.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
