--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -24,6 +24,7 @@ library
                      , Ch18.Exercises
                      , Ch10.PNM
                      , Ch10.Parse
+                     , Ch12.Barcode
   build-depends:       base >=4.6 && <4.8,
                        mtl >=2.2.1 && <2.3,
                        containers >=0.5.5 && <0.6,
