--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -39,7 +39,8 @@ library
                        transformers >=0.4.1.0 && <0.5,
                        bytestring >=0.10.4.0 && <0.10.5,
                        array >=0.5.0.0 && <0.6,
-                       text >=1.2.0.0 && <1.3
+                       text >=1.2.0.0 && <1.3,
+                       parsec >= 3.1.7 && <3.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -59,6 +60,7 @@ executable Ch04_InteractWith
                        transformers >=0.4.1.0 && <0.5,
                        bytestring >=0.10.4.0 && <0.10.5,
                        array >=0.5.0.0 && <0.6,
-                       text >=1.2.0.0 && <1.3
+                       text >=1.2.0.0 && <1.3,
+                       parsec >= 3.1.7 && <3.2
   hs-source-dirs:      src
   default-language:    Haskell2010
