--- a/RealWorldHaskell.cabal
+++ b/RealWorldHaskell.cabal
@@ -45,6 +45,7 @@ library
   default-language:    Haskell2010
 
 executable Ch04_InteractWith
+  ghc-options:         -threaded
   -- ghc-options:         -Wall -threaded
   main-is:             Ch04/InteractWith.hs
   build-depends:       base >=4.6 && <4.8,
